src/styles/elements/_teaser.css
.teaser {
    --teaser-position: relative;
    --teaser-width: var(--content-width-with-padding);
    --teaser-max-width: var(--content-wide-max-width);
    --teaser-margin: 0 auto;
    --teaser-display: grid;
    --teaser-grid-auto-flow: dense;
    --teaser-grid-template-columns: 1fr;
    --teaser-grid-gap: var(--spacing-normal);
    --teaser-grid-z-index: var(--z-index-content);

    --teaser-figure-column: 1;
    --teaser-figure-border-radius: var(--border-radius-normal);
    --teaser-figure-overflow: hidden;
    --teaser-figure-position: relative;

    --teaser-image-aspect-ratio: var(--aspect-ratio-default);
    --teaser-image-object-fit: cover;
    --teaser-image-width: 100%;
    --teaser-image-height: auto;

    position: var(--teaser-position);
    display: var(--teaser-display);
    grid-template-columns: var(--teaser-grid-template-columns);
    grid-auto-flow: var(--teaser-grid-auto-flow);
    gap: var(--teaser-grid-gap);
    width: var(--teaser-width);
    max-width: var(--teaser-max-width);
    margin: var(--teaser-margin);
    z-index: var(--teaser-grid-z-index);
}

.slider .teaser {
    --teaser-width: 100%;
}

.teaser[teaser-type="media"] {
    --teaser-image-aspect-ratio: auto;
}

.teaser__figure {
    grid-column: var(--teaser-figure-column);
    border-radius: var(--teaser-figure-border-radius);
    overflow: var(--teaser-figure-overflow);
    position: var(--teaser-figure-position);
}

.teaser__image {
    aspect-ratio: var(--teaser-image-aspect-ratio);
    object-fit: var(--teaser-image-object-fit);
    width: var(--teaser-image-width);
    height: var(--teaser-image-height);
}

.teaser__figure .video {
    height: auto;
    width: 100%;
    aspect-ratio: var(--teaser-image-aspect-ratio);
}

.teaser__content > *:last-child {
    margin-bottom: 0;
}

.teaser__content > *:first-child {
    margin-top: 0;
}

@media screen and (min-width: 840px) {
    .teaser {
        --teaser-grid-gap: var(--spacing-xl);
    }

    .teaser[image-width="50"] {
        --teaser-grid-template-columns: 1fr 1fr;
    }

    .teaser[image-side="right"] {
        --teaser-figure-column: 2;
    }

    .teaser[image-width="33"][image-side="left"] {
        --teaser-grid-template-columns: 1fr 2fr;
    }

    .teaser[image-width="33"][image-side="right"] {
        --teaser-grid-template-columns: 2fr 1fr;
    }

    .teaser[image-width="66"][image-side="left"] {
        --teaser-grid-template-columns: 2fr 1fr;
    }

    .teaser[image-width="66"][image-side="right"] {
        --teaser-grid-template-columns: 1fr 2fr;
    }

    .slider .teaser__content {
        padding-right: var(--spacing-xxl);
    }
}

